--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
 	  href="https://d396qusza40arc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-    body {
+    <style type="text/css">
+ body {
     padding-top: 20px;
     padding-bottom: 40px;
 }
