--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row navigation">
         <div class="span2 logo">
-         <img src="~/images/Science-Of-Lifting-Logo.gif"></img>
+         <img src="<%= image_path("images/Science-Of-Lifting-Logo.gi")> %>"/>
         </div>
         <div class="span6 blank">
           Blank
